@@ -40,8 +40,14 @@ EXPORT_FUNCTIONS src_prepare pkg_postinst
 reiser4_init_variables() {
 	debug-print-function ${FUNCNAME} "$@"
 
+	local KBaseV=${KMV:0:1}
+
 	: ${REISER4_VER:=${REISER4_VER:-"${KMV}"}} # Patchset version
-	: ${REISER4_SRC:=${REISER4_SRC:-"mirror://sourceforge/project/reiser4/reiser4-for-linux-3.x/reiser4-for-${REISER4_VER/PV/$PV}.patch.gz"}} # Patchset sources url
+	if [ "x4" = "x$KBaseV" ] ; then
+		: ${REISER4_SRC:=${REISER4_SRC:-"mirror://sourceforge/project/reiser4/reiser4-for-linux-4.x/reiser4-for-${REISER4_VER}.patch.gz"}} # Patchset sources url
+	else
+		: ${REISER4_SRC:=${REISER4_SRC:-"mirror://sourceforge/project/reiser4/reiser4-for-linux-3.x/reiser4-for-${REISER4_VER/PV/$PV}.patch.gz"}} # Patchset sources url
+	fi
 	: ${REISER4_URL:=${REISER4_URL:-"http://sourceforge.net/projects/reiser4"}} # Patchset url
 	: ${REISER4_INF:=${REISER4_INF:-"${YELLOW}ReiserFS v4 version ${GREEN}${REISER4_VER}${YELLOW} from ${GREEN}${REISER4_URL}${NORMAL}"}}
 
