@@ -29,7 +29,7 @@ DIST deblob-check-3.2 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd
 DIST deblob-check-3.4 612122 SHA256 5a9552abac85cab9715a958785a3f901937fa135d85452647a16398181909c12 SHA512 c52917e9de8211f66a1e6805282dd727f1ec86701f76cbf16d0909ec212a9429c0994e0993db95b57934b17d9d91b08b4fa29f80c501397a5acce84bf4e1aed9 WHIRLPOOL d1c591fe7e229f9638945dd14f7dd16617ecff224b4cf2a6a3dd58913c23f7eb67496c26235d1d4637607bc9c9d260d990a0935b6b5bf2332f15e8ed58269856
 DIST grsecurity-3.1-3.14.43-201505191737.patch 4327226 SHA256 3cba23a6592deb29ccea06bf5e364a4d000fb6ae884b4841b873b5cb5bc559c6 SHA512 3a9222a467617811a4badc196f025e89712fdbac345ca6dd67b9ad18b7aae2dec8d23b6b2de2abf6ed6cf96243d8cd12cc2fb3dd0fe1b27b8a0abb22acc1afd2 WHIRLPOOL 43a39b2b365364197858fd3b6fdc6f7a50ea383c626cc62d106412a8033e94ab9463d81f8ef8fe0e459c8f27706bad33af16357b23492218ff1d53385254fabd
 DIST grsecurity-3.1-3.2.69-201505101117.patch 4312708 SHA256 4c7a4f9ff2e49e887d413c3720e26190091f3e9a1c144523c908d14e32f3095d SHA512 4ac4102585b2ae2b66c3ed1c021bcd63801169526b7ddb3edf7db65f51521dee51e3d410b04b5220359b6802cf72363f585ace861963b636a6be6ebc23d933b4 WHIRLPOOL b689306b8bdbccc4b3fa2a62dc1df398770a5fae6093a5e989fff098d7e03b51188c545b3d6c42968840b99411aa10a67902502f5741de85114717487109d343
-DIST grsecurity-3.1-4.0.6-201506232104.patch 6152906 SHA256 aeb95b592e633a8f1785c433d244221d2931b3bebbbabde2298843505d203542 SHA512 666594e47f030a28f6e75f3fc2359d6e5311afe87262a1dfedb1e1f3278aae2def0cf37288908785acd4909b101eb43ac9a456ce8b3f323fbd07237a8ad2da64 WHIRLPOOL 211e822e936796cb1a0017c9910ba507c3e3290f110fd74277c6816ec724c2380ddf2f587b6552da5f5ef5a425b3c0713d9075e751ee2c0294d8511bad6ed166
+DIST grsecurity-3.1-4.0.7-201506300712.patch 6154097 SHA256 275aaee3647921ecafe0c1e6b03d5a0fed59ab18c82777b0a88408664be78067 SHA512 79e358e5927a5a1824063d8ded5ff2754e6c5f075a8323b89aa54556c6f12d9470eff4ae66db7e1dc868ccf77438f4b1f2e01dd6b8a77478f80a1a3346dd2822 WHIRLPOOL b4338653a91cc90954c37c1abdcb38769f54571a874b8645317ed232418a43afad8219f336c5b234bbc1f01a98c217140666b35b92dc0eec20e33e19f9373411
 DIST kernel-uek-2.6.32-400.34.3.el6uek.src.rpm 71598007 SHA256 2f21b019ffa84e8273358cd925c3c751a07391e699e35cb505ce1c3b9302713d SHA512 a5773d6754374b807945f4e2f4615edc2b5b02945b4ac1ca31486349ae808564292c7d85f89291461caf3de3fd2d183fb6307dd73bfae37f2e60ca7e114b7883 WHIRLPOOL 1dbfd036507f3e9dcb62a32ece4b1d3047c2ac5c26124f949a16ee3cbdbb7120ea14cda438379857d0277654a5cce7737d1e1e8cb65e1a33a8ce6aa8759ee120
 DIST linux-2.6.32.tar.xz 52620720 SHA256 723106c298c5ba8733bb51ecc106b05e332a18490edc5f61cc6e57dbb36dcc46 SHA512 f8570daf2806eb191fce54cc7358577b0571bb295a75bd86db630d6136b328ae48e4732554b2d1886c64b0a0018bf0b9105dcface978a5005d1b77789aa40312 WHIRLPOOL bfcb4b186f7c4b60e69674a85d20a8e92b5efd05941b550401ef446cc6b20c9ed197f920d1cd9250c0e518c05308b9225f7ababe41cdfc83570412117b2ee555
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
@@ -58,6 +58,7 @@ DIST patch-3.2.69.xz 1406184 SHA256 25e1b9752bd42004dfe5c3c362570434ce674845ea03
 DIST patch-3.4-ck3.lrz 49607 SHA256 6313aff3461148ef187a4e11f6ebc999acee948fb783480f7e0a61de4581082d SHA512 9f890dc12e660a9984532c9e1669161821ae514cf2889ac968152140b46162f0a7698c9b6c68e4141f50c70eafbee1235b0edb30160a2f6ddde97af2cea4dc7f WHIRLPOOL a07a0d6e35637c91720b366ffa4b482c25f92f04b97bfae5e0507c47c5b600e0101c594ef7dd63bcf4c41bac6237f04b74dcde25543ed11f419fe6ed889f51fa
 DIST patch-3.4.107.xz 1216492 SHA256 1c8c5cea7f0811064e33fd034ee35c399e376f2f0bcac37502f62e1f3a686f40 SHA512 fdc3aa1023bce84c2bb8741d7ee32d9262175d8ade2b26cc8e3f06d9d04580feb8d7f62e993dd9804c4e3eb05667f7b1397a8082ee605096e20b37ada90f7fde WHIRLPOOL 6224b2c21108b754991b11060d79a96c9afe2b5a35f94bf225b25d03f2dce39882bbd6371f752b6fbb3b8613487bd1a5832711be63a5207a00764274ea213ff5
 DIST patch-4.0-ck1.lrz 50778 SHA256 cac0a3a588d965bc448800fab2a59e8cc341efb1050110cd6ccdeb3aee9ece16 SHA512 fdab282c5bf7d97b68b1a175f1585c3912dcca11d955b70747e07c946a4eaf5d4da5f3bdb7132245576448e0d368a918ee68ae10b82f39f6255101e4177b4826 WHIRLPOOL 140e77539533a79a0a31e7c2921af2681af3e43b137bec02c160857c4ec588cb73ae8382ce77e4e1ae7343a50b920be39c6bfd7017d4feebc1f1213c6a06f433
+DIST patch-4.0.5-rt4.patch.xz 166564 SHA256 9503166ca9cfc71b3d05d3c86a650a42f730f28d62eb04e77443d67a70f5d2df SHA512 e4655337a4ca6fa3ecd21c590446367e4755e0089352a9a7db87c7f20e360ce4dc84c5e34f4c99b25e8489cafbbf9019cff084caaa2fcfae91a90b7eb37ef60c WHIRLPOOL 4a1df242fe31387419cbb80a214f1996c4d4e3658787a1dcf5c44b16eebc8e16acd5b8c061e749d129970032b0a3333f8198a4357f5812670172f8680a4e64d7
 DIST patch-4.0.7.xz 186264 SHA256 c6deb2cda4d87fc2e09442e31f3e6e70e54962744c3a4d2653a8fda381442de0 SHA512 94c9ae61d665bdb06b2558b4e473777c13cb77e00c4b6cab326d10372f64bb8a9550f8bc2e2d3e1bf2a4ddf2adf1f3546a93e727aeb6b8792057017276dd9683 WHIRLPOOL cf53e324283f59111e368b740e78fd1ecbc5aec06d71b6abce6f5bfb9c9ab3ceb671fa93452250819f92627dc4d3d23f1eb32d36788135ff158f70da0c11a426
 DIST patch-4.1.1.xz 3828 SHA256 48a813fb6795153f6906759501bea9e290db528894d1c0726667efc8e55dd7ad SHA512 2ea80302c413193e8d39ff736f6ac2eefc70e1394cfef1bfd7b672ff30b6c2d17191e62a2a0126c5363b419c86a23e28d46ffc61e512c5640b61519c50c7a16a WHIRLPOOL 819b9a05bdbce15fd319dafc46fae9fcd833470ea4166d07b46f2d57e92500598deb1af471a5ef2b2c68c213698dbdfda352704715021d53eb1d2a58226d9ab9
 DIST patch-linux-3.10.7-rsbac-1.4.7.diff.xz 382900 SHA256 57b283ac21ed14b61d4ccc672d3317f10abc4f1ac8e80ee3f6269d00e51ea1d2 SHA512 37ff26f5cef201c46cd8b585cf2c8cc7a1f4f3bc7d8eb7e112bdeecf10483325517921323917f76d63209b43707dde514e7a263f85328fd2ead0a1af7fd3e746 WHIRLPOOL 7038853c1503d521df51acc64ea295e683a12e970db6444ec765d3578ab881da7a9188aa1c54811065260ca230b8432d0aac7cac2621e838fe13ed3a355e1a96
@@ -76,6 +77,7 @@ DIST reiser4-for-3.12.6.patch.gz 611982 SHA256 ed2e2487498544f76ee826b2b5add5d10
 DIST reiser4-for-3.14.1.patch.gz 615990 SHA256 7fc7f1addaf4395872fb9342e837a1ae3e56450b96df4203c8fa2d3b30cd9043 SHA512 4a10794a6c6f7295a3a0a5080678d2d17393396ef3cb76862266de9441223dc601d6109d5b822e6127fe80c295a1e57bd6e4f790b8f5e447a91a8166139e036f WHIRLPOOL aa38ded211b78ce3e377a10a7bd86c5bbaaa9aa4b70bfa87cc4b08e9d9a3b66528240411422206af6425a5d2d08cb969a267d7044b0e03432eb87809508b723b
 DIST reiser4-for-3.18.6.patch.gz 623675 SHA256 067b7d297f556048d7dc1134d1764ed4db95a40e03ef57accf3d2477162d7862 SHA512 be045e2779801e6eb3cd779e1b2ddd658f04513371c19cb484f6e917b9b2e03655befb3f863c904f0da8c274b9b13806432ee40acd0781b270f424dbe299f3ff WHIRLPOOL 422d8a3d449d32a47c878d1d37158787883925b73a53c4167d4ac6b9eb0582df2f7a78564e3840633ea3d231ffd80e1105af58207436dd6fd862aa500fb19961
 DIST reiser4-for-3.19.5.patch.gz 623331 SHA256 2a87e54190f2a74d907301e6567f166efbd12af383e235bad9e4f7bbc51345ac SHA512 d5d718c02b64dcb17b235db07a1182d05ddc12da25f7e59277a3b7afe5dc4eebc0542eba5b52932d6e3c783b308ad429467b2819648df537fae986831a9cd09f WHIRLPOOL bc9a72c08d930bdf2aaab85523e209566e9e3b89acd1268fcf9777f13b0074a36bb63c07dee3c55a5553f972e07e2427bb28f70e0381f47015bdb4cb8fd0bceb
+DIST reiser4-for-4.0.4.patch.gz 623200 SHA256 1a8acae4f8a3d36d72d819e78b18464054503a8bf7221d5fef2625f030825521 SHA512 eaa7690df6b3c981eacc061996a6ef44544c99d4170512132d4a8d56d4da5b627d4fed75c0e5dd65624c797d65f8101fafc90eb57d7d3d45801b7c791d6a81f7 WHIRLPOOL bc8609f97722191cf6ee5de3f1ee0fc21ae7933e8c4ff2bb6ee114a6bbcb526a73bcf530d66e47890aa9023c0eaa71f54daf28cd5fcbc369abad2bbb0b66db3c
 DIST tuxonice-3.2-for-2.6.32.patch.bz2 127233 SHA256 7c4b54d681aa81a325e2621ed6f83b42fad4c5e455fa442f2b82c9c57451c837 SHA512 f86fda96739ab84ff2171788a88b0c38b0bc42cbfe565451f14d962c09c1a8cbca2edfd5fc3bf2be13b67454c4ff375c378c4c84e77241ba21ac3c61f9110185 WHIRLPOOL b9a30b624d9da3f7e98ea239e069f1db4affcf46c59fefe0690665b323af84a84b35df12b0edaf8fed6e4a0b369e827cb5d70a49354470510f9cb3e663148370
 DIST tuxonice-for-linux-3.10.69-2015-02-14.patch.bz2 129331 SHA256 00d58d383b207439c2849abcae5f511d2512591be5105d8e55da451c3c813335 SHA512 ff22acb7e614e37a78c9b7a688f70463834c1ccc43baeb1687f961e341535cce1af48b71ec722b7d322f28d66ba78696972679058764106cf297e059489641ed WHIRLPOOL 069c2c8f30dc47134aa55f1b18a8cac88c23ef9d7d66be46ab28c89af1290b228c08f2c758b3bcaedafb5815dd7cca95d92acff2533f7d42256e26e3c44951e3
 DIST tuxonice-for-linux-3.12.37-2015-02-02.patch.bz2 129411 SHA256 092ca9c6d399f9909951b7106a6fbf3389151dc58d2867474a035bc33c2769f4 SHA512 cb26e7f2c921d02633f659ac758a589ea9c0d3f314598b6128c9998fff135dd169bf4f9a0de1fa10ff2e511eccfe3dd69bee2f304bae244039c392eb9d7d08ad WHIRLPOOL 2d8aafdf58fbcfc028e3804aaa6a411d6a30f37f0556529eb3b05f7613089c3f447d469b5bde1f2cc84dc1362bcd7b9885080675f1606a7d4aec0a9f67efcbab
@@ -84,6 +86,7 @@ DIST tuxonice-for-linux-3.18.7-2015-02-14.patch.bz2 127694 SHA256 fb94b85c3b4e3f
 DIST tuxonice-for-linux-3.2.62-2014-08-07.patch.bz2 133109 SHA256 0e6de2155792aafd740cb1634cf1fa89a9dbd69c49edf28c13f6b887ee818135 SHA512 de48534b7d777c260ffd180879ad003566cfc3dfa24e45bb27213680a254005f0d2a77cf154edbc01efbdd390407b2f03224e1afe5c41385883ca1ca6b631e26 WHIRLPOOL aefb94831851712cc7587e28696db7bff8330e626397df7caafd3bdfd8b5eaec3b80d0beb6733e529ad414d59ef0d342c7d30ec26328156203d5b28eb9801e69
 DIST tuxonice-for-linux-3.4.106-2015-02-10.patch.bz2 131321 SHA256 93998a24b0b4645cfa87272446d5cdbf8f8050fa4c4e74cd23d9188394a32acf SHA512 3c15ece9366eaea749cf0cea156b021b7bcbd69803f4fb76ebbb72f00be4bd36949a91bc5f459628cb80e34485a0a0d2918d9e053b97b95ec0ac9a21ac796567 WHIRLPOOL a3e4fdfa923a8208eae6bd4acce26dd63a2b3a9339595e330f8c71a7ea61bce8da1e2d0957056f7109b8c1a3bed4f6fee73f7e02b7ba245017529a2fd5db0a65
 DIST tuxonice-for-linux-head-3.19.0-2015-02-10.patch.bz2 130927 SHA256 9105e11eff55be56714f8b55703b9efe51ea2cab813cca714e264020014a42c1 SHA512 9671531338c2a6c2e5c012ead813ce2c4e07bae522ecb57a510576cc9269d3806333a6e6b08c0665b3031c827767233442b299ddb66792c55ddc253b56e182e4 WHIRLPOOL 4ef8e63ad92d1f970c647a07564a3d308915a93dccdf08ac40a8024194b1ac9f37481219fc802526e4b779f0265a378355c5b97c09dee5f338d58eb8a03360d6
+DIST tuxonice-for-linux-head-4.0.0-rc6-2015-04-06.patch.bz2 132391 SHA256 2cd4f262d0c8529fde49ff00203870da271cf83d1b416ae1b629fdfcc5f829f6 SHA512 424936ca6caa4332214f848da75a96484827bbe998d0ba76a5d211be3f135fed7190b34c4375fb6f89bd0e21feaeff5eaea5205a3dd3f071f8c44ff6cbc68815 WHIRLPOOL d2b2f3111046ebaf5a0fbd89d1d46964f89331c9e0256376f417eba51f267afd03d2be25dfd0d99c73281693f149f42a0f9985e6b4f3402152d6fccc0a2cf3ac
 DIST tuxonice-for-linux-head-4.1.0-rc8-2015-06-17.patch.bz2 133750 SHA256 5b2438090b74dbeccf5592e387eb39b77aa688cf029c37db7fedc316cfd95588 SHA512 3ddb1d41490196caf2afd00fdee749f5927f4e06ddd07086a817aeadacdf0692ca7aa2971a57fb37cdb99fe17a4702330782e2f857c07e6321abcd1209bdf886 WHIRLPOOL 1536b72b3d1454caac573721d3ef2811a4c4d8eba658b74d52e1adacc0886d75fb626673ff3453fa6417638372d37792922d42f21f70dd39f7e935a801dfdbf6
 DIST uksm-0.1.2.3-for-v3.10.ge.46.patch 181600 SHA256 c47320907b6a8209bb88017057576eda63595bfde2038875bbc15579de1c168d SHA512 d3a2162cc7aad4d13cc922b59f11cadf2513093bb96bde531ffb98fd9cd5ae46d64eba29f505a9c6453c18b7a50b63cabaa1c1b1459fb201dbe424dbcb453ed2 WHIRLPOOL 5547440d648f1cf10ac5461a9b6e4353a0acb4214bf214bece535de0859d09b434508afd582be6ba5f1bbb071710742972a4641ee43d79bbd255f1bbfe3e9769
 DIST uksm-0.1.2.3-for-v3.12.ge.23.patch 181565 SHA256 86195ff8a0e95bfdaedf439cbe9e4945e8589904c2f12fcbbdd6466ca9a22752 SHA512 53c26dd0abb6f206b2920ad18ccf2e2f0710ad570111f8601a38ddf5193e47c02ca0c895142a65fecf156dfc0a37112e0bfb0ae27f6f36efd9b1947bafe2c957 WHIRLPOOL 2fb2449d38824d46fc3795206d8cfc467f6a60e6340deb5be4aee705f40815251c6fb11ce64e2ffefc2b6c016125dfa5509c3515d1576c0ea65c7b361a2bcec6
